--- a/.github/workflows/nuget-publish-template.yaml
+++ b/.github/workflows/nuget-publish-template.yaml
@@ -56,7 +56,7 @@ jobs:
       
     # Create the NuGet package in the folder from the environment variable NuGetDirectory
     - name: Pack
-      run: dotnet pack ${{ inputs.project_path }} --configuration Release --output ${{ env.NuGetDirectory }}
+      run: dotnet pack ${{ inputs.project_path }} --configuration Release --output ${{ env.NuGetDirectory }} --include-symbols --include-source
 
     # Publish the NuGet package as an artifact, so they can be used in the following jobs
     - uses: actions/upload-artifact@v4
