--- a/.github/workflows/run-test.yaml
+++ b/.github/workflows/run-test.yaml
@@ -44,7 +44,8 @@ jobs:
     - name: Convert coverage to lcov (optional, for prettier visualization)
       run: |
         dotnet tool install -g dotnet-reportgenerator-globaltool
-        reportgenerator -reports:**/coverage.cobertura.xml -targetdir:coveragereport -reporttypes:HtmlInline_AzurePipelines;Cobertura
+        reportgenerator -reports:**/coverage.cobertura.xml -targetdir:coveragereport -reporttypes:"HtmlInline_AzurePipelines;Cobertura"
+
 
     - name: Upload coverage report artifact
       uses: actions/upload-artifact@v4
