--- a/.github/workflows/run-test.yaml
+++ b/.github/workflows/run-test.yaml
@@ -57,7 +57,7 @@ jobs:
     - name: Publish Coverage Summary
       run: |
         echo "## Code Coverage Summary" >> $GITHUB_STEP_SUMMARY
-        echo "[View Coverage Report](./coveragereport/index.html)" >> $GITHUB_STEP_SUMMARY
+        echo "[📦 Download Coverage Report Artifact](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})" >> $GITHUB_STEP_SUMMARY
 
   run_test_skipped:
     if: ${{ inputs.need_run_test != true }}
