--- a/.github/workflows/deploy-nuget.yaml
+++ b/.github/workflows/deploy-nuget.yaml
@@ -35,6 +35,7 @@ jobs:
           dotnet-version: ${{ inputs.dotnet_version }}
 
       - name: Publish NuGet package
+        shell: pwsh
         run: |
           foreach($file in (Get-ChildItem "${{ env.NuGetDirectory }}" -Recurse -Include *.nupkg)) {
               dotnet nuget push $file --api-key "${{ secrets.NUGET_APIKEY }}" --source https://api.nuget.org/v3/index.json
