--- a/.github/workflows/validate-nuget.yaml
+++ b/.github/workflows/validate-nuget.yaml
@@ -8,6 +8,10 @@ on:
         type: string
         default: '9.0.x'
 
+defaults:
+  run:
+    shell: pwsh
+
 jobs:
   validate_nuget:
      runs-on: ubuntu-latest
